	- added template results caching capability. (Monte, Andrei)
    - added optional 'options' attribute to html_options custom function
      that allows passing associative arrays for values/output. (Andrei)
	- modifier arguments can now contain '|' and ':' characters inside quoted
	  strings. (Andrei)

Version 1.2.2
-------------
    - fixed bug that would not respect nested template directories and would
      put all compiled files into top-level one. (Andrei)
	- fixed bug using $PHP_VERSION instead of environment var PHP_VERSION.
	  (Monte)
    - a couple small warning fixes. (Monte)

Version 1.2.1
-------------
    - added $compile_dir, removed $compile_dir_ext, simplified usage. (Monte)
    - added tips & tricks chapter to documentation. (Monte)
    - misc documentation updates. (Monte)

Version 1.2.0
-------------
    - updated documentation (Monte)
    - added file and line number information to syntax error messages. (Andrei)
    - added ability to index template vars by a key. (Andrei)

Version 1.1.0
-------------
    - misc documentation changes, official stable release

Version 1.0b
------------
    - fixed the bug that prevented using non-array values for 'loop' attribute.
      (Andrei)
    - many misc documentation changes & additions (Monte)

Version 1.0a
------------
    - fixed bug that caused templates to recompile every time (Monte)

Version 1.0
------------
    - initial release