@@ -47,7 +47,8 @@ testing strip tags
 
 </PRE>
 
-test: {$now|date_format:"%I:%M %p"}
+{insert name = foo
+		arg1=5}
 
-{insert name = foo arg1=5}
+test: {$now|date_format:"%I:%M %p"}
 
