@@ -1,3 +1,8 @@
+    - made Smarty catch unimplemented modifiers and custom functions and output
+      error messages during compilation instead of failing during run time.
+      (Andrei)
+    - added register_custom_function() and register_modifier() API calls
+      to make registering stuff easier. (Andrei)
 	- added template results caching capability. (Monte, Andrei)
     - added optional 'options' attribute to html_options custom function
       that allows passing associative arrays for values/output. (Andrei)
